test/tests/operators/load_balance/error_non_list.txt
error: expected a list, got `string`
 --> tests/operators/load_balance/error_non_list.tql:7:14
  |
7 | load_balance $worker {
  |              ^^^^^^^ 
  |
